<resources>
    <string name="app_name">gfsj</string>

    <!--我的主页-->
    <string name="main_collect">我的收藏</string>
    <string name="main_search">搜索</string>
    <string name="main_shopping_cart">购物车</string>
    <string name="main_mine_center">用户中心</string>
    <string name="main">首页</string>
    <string name="main_classification">分类</string>
    <string name="main_recommend">推荐</string>
    <string name="common_go_back">返回</string>

    <string name="classification_china_furniture">新中式家具</string>
    <string name="classical_furniture">古典家具</string>
    <string name="classification_tea">珍品古茶</string>
    <string name="classification_red_wine">珍品红酒</string>
    <string name="classification_study">文房四宝</string>
    <string name="classification_painting">字画</string>
    <string name="classification_software">软件大全</string>
    <string name="classification_decorate">装饰大全</string>
    <string name="classification_classical_decoration">古典装饰材料</string>
    <string name="classification_lighting">古典灯饰</string>

    <string name="classification_phoebe">金丝楠木</string>
    <string name="classification_three_box_customization">三框定制</string>
    <string name="classification_wood_carving">木雕</string>
    <string name="classification_bead">串珠</string>
    <string name="classification_Design_Institute">设计院</string>
    <string name="classification_decoration_company">装修公司</string>
    <string name="classification_Multi_Media">多媒体</string>
    <string name="classification_Art_Finance">艺术金融</string>
    <string name="classification_Classical_art">古典布艺</string>
    <string name="classification_Ancient_kitchen_range">古灶坊</string>
    <string name="classification_President_office_series">总裁办公系列</string>
    <string name="classification_Chao_Ke_Hui">潮客荟</string>



    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <string name="app_conf">Agora会议室</string>

    <string name="title_channel">房间%s</string>
    <string name="action_settings">设置</string>

    <string name="key_input">输入厂商Key</string>

    <string name="room_input">输入房间号码</string>

    <string name="video_enter">进入视频通话</string>

    <string name="micro_enter">进入语音通话</string>

    <string name="video_button">视频通话</string>

    <string name="micro_button">语音通话</string>

    <string name="key_required">Key不能为空</string>

    <string name="room_required">房间号不能为空, 且需要是数字</string>

    <string name="room_button_one">静音</string>

    <string name="room_button_two">扬声器</string>

    <string name="room_button_three">关闭摄像头</string>

    <string name="room_button_four">切换摄像头</string>

    <string name="room_prepare">房间等待好友加入</string>

    <string name="network_error">网络无法连接，请检查网络</string>

    <string name="error_101">无效的厂商Key</string>

    <string name="error_confirm">确定</string>


</resources>
