<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">
    <TextView
        android:id="@+id/tv_main"
        android:background="@drawable/icon_main_bg"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:text="@string/main"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="39dp"
        android:layout_marginLeft="119dp"
        android:textColor="@color/color_fffffe"/>
    <TextView
        android:id="@+id/tv_main_classification"
        android:layout_marginTop="39dp"
        android:layout_toRightOf="@id/tv_main"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/main_classification"
        android:textSize="20sp"
        android:layout_marginLeft="21dp"

        android:textColor="@color/color_767f8e"/>
    <TextView
        android:id="@+id/tv_main_recommend"
        android:layout_marginTop="39dp"
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:layout_marginLeft="21dp"
        android:text="@string/main_recommend"
        android:textSize="20sp"
        android:layout_toRightOf="@id/tv_main_classification"
        android:textColor="@color/color_767f8e"/>

    <com.wckj.gfsj.CustomUi.StopViewPage
        android:id="@+id/svp_context"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_main"
      />
</RelativeLayout>