<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_bg"
    tools:context=".Activity.MainActivity">

    <TextView
        android:id="@+id/tv_time"
        android:text="10:27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="21dp"
        android:layout_marginRight="27dp"
        android:textColor="@color/color767f8e"
        android:textSize="10sp"
        />
    <RelativeLayout
        android:id="@+id/rl_search"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="23dp"
        android:background="@drawable/icon_bg_serach">
    <TextView
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color767f8e"
        android:textSize="7sp"
        android:text="@string/main_search"
        android:drawableLeft="@drawable/icon_serach"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_collect"
        android:layout_marginTop="21.5dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@id/rl_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:drawablePadding="2dp"
        android:textColor="@color/color767f8e"
        android:text="@string/main_collect"
        android:drawableLeft="@drawable/icon_collect"
        />
    <TextView
        android:id="@+id/tv_shopping_cart"
        android:layout_marginTop="20dp"
        android:layout_marginRight="11dp"
        android:gravity="center"
        android:layout_toLeftOf="@id/tv_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="@color/color767f8e"
        android:text="@string/main_shopping_cart"
        android:drawableLeft="@drawable/icon_shopping_cart"
        />
    <TextView
        android:id="@+id/tv_mine_center"
        android:layout_marginTop="21.5dp"
        android:layout_marginRight="11dp"
        android:layout_toLeftOf="@id/tv_shopping_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:drawablePadding="2dp"
        android:textColor="@color/color767f8e"
        android:text="@string/main_mine_center"
        android:drawableLeft="@drawable/icon_center_person"
        />


    <FrameLayout
        android:id="@+id/fl_context"
        android:layout_below="@id/tv_mine_center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
</RelativeLayout>
