<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="@string/common_go_back"
            android:layout_marginLeft="40dp"
            android:drawableLeft="@drawable/icon_go_back"
            android:drawablePadding="20dp"
            android:textColor="@color/color_b3b3b4"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:text="10:27"
            android:layout_centerVertical="true"
            android:textColor="@color/color_767f8e"
            android:textSize="15sp"
            />

        <RelativeLayout
            android:id="@+id/rl_search"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@id/tv_time"
            android:background="@drawable/icon_bg_serach">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@drawable/icon_serach"
                android:text="@string/main_search"
                android:textColor="@color/color_767f8e"
                android:textSize="15sp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_toLeftOf="@id/rl_search"
            android:drawableLeft="@drawable/icon_collect"
            android:drawablePadding="3dp"
            android:text="@string/main_collect"
            android:textColor="@color/color_767f8e"
            android:textSize="19sp"
            />

        <TextView
            android:id="@+id/tv_shopping_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@id/tv_collect"
            android:drawableLeft="@drawable/icon_shopping_cart"
            android:gravity="center"
            android:text="@string/main_shopping_cart"
            android:textColor="@color/color_767f8e"
            android:textSize="19sp"
            />

        <TextView
            android:id="@+id/tv_mine_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@id/tv_shopping_cart"
            android:drawableLeft="@drawable/icon_center_person"
            android:drawablePadding="3dp"
            android:text="@string/main_mine_center"
            android:textColor="@color/color_767f8e"
            android:textSize="19sp"
            />


    </RelativeLayout>
    <TextView
        android:id="@+id/tv_content_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:drawablePadding="3dp"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="77.5dp"
        android:text="@string/classification_classical_decoration"
        android:textColor="@color/color_767f8e"
        android:textSize="22sp"
        />


    <RelativeLayout
        android:id="@+id/rl_brand"
        android:layout_marginTop="105dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >
        <ImageView
            android:layout_alignParentRight="true"
            android:id="@+id/iv_more_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="77.5dp"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_more_right"
            />
        <TextView
            android:id="@+id/tv_brand_3"
            android:layout_toLeftOf="@id/iv_more_right"
            android:gravity="center_vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/color_767f8e"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/tv_brand_2"
            android:layout_toLeftOf="@id/tv_brand_3"
            android:gravity="center_vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/color_767f8e"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            />
        <TextView
            android:id="@+id/tv_brand_1"
            android:layout_toLeftOf="@id/tv_brand_2"
            android:gravity="center_vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/color_767f8e"
            android:textSize="20sp"
            android:layout_marginRight="15dp"
            />
        <ImageView
            android:id="@+id/iv_more_left"
            android:layout_toLeftOf="@id/tv_brand_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_more_left"
            android:visibility="gone"
            />
    </RelativeLayout>

</RelativeLayout>